<resources>
    <string name="app_name">Easy Way</string>
    <string name="entrar">Entrar</string>
    <string name="text_cadastro">Crie uma conta clicando aqui</string>
    <string name="title_cadastro">Cadastre-se</string>
    <string name="ola_motorista">Olá Motorista!</string>
    <string name="selecione_caminhao">Selecione seu caminhão</string>
    <string name="batata">Batata de Campinas ➥ São Paulo</string>
    <string name="cana">Cana de Minas Gerais ➥ São Paulo</string>
    <string name="morango">Morango de Atibaia ➥ Santo André</string>
    <string name="tomate">Tomate de Jundiaí ➥ Guarulhos</string>
    <string name="trabalho">Escolha um Trabalho!</string>
    <string name="btnTrabalho">Aperte aqui após selecionar um trabalho</string>
    <string name="btn1">Veículos</string>
    <string name="btn2">Serviços</string>
    <string name="btn3">Adicionar Serviço</string>
    <string name="btn4">Configurações</string>
    <string name="title_config">Configurações</string>
    <string name="btnPerfil">Perfil</string>
    <string name="btnLogout">Log-out</string>
    <string name="development">Development by Grupo Matriz - 2024</string>
    <string name="title_perfil">Perfil de Usuário</string>
    <string name="perfil_nome">Nome:</string>
    <string name="perfil_email">E-mail:</string>
    <string name="perfil_cpf">CPF:</string>
    <string name="perfil_tipo">Tipo de Usuário:</string>
</resources>