<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp"
    tools:context=".Trabalhos">

    <TextView
        android:id="@+id/textViewTrabalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trabalho"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTrabalho"
        style="@style/Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btnTrabalho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTrabalho" />

    <RadioGroup
        android:id="@+id/rdg1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTrabalho"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="16dp">

        <RadioButton
            android:id="@+id/rdbCana"
            android:layout_width="400dp"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_radio_selector"
            android:button="@color/dark_blue"
            android:drawableTop="@drawable/cana"
            android:tag="-19.9208,-43.9378,-23.5505,-46.6333"
            android:text="@string/cana"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp">
        </RadioButton>

        <RadioButton
            android:id="@+id/rdbBatata"
            android:background="@drawable/custom_radio_selector"
            android:button="@color/dark_blue"
            android:drawableTop="@drawable/batata"
            android:text="@string/batata"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_width="400dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:tag="-22.9062,-47.0624,-23.5505,-46.6333">
        </RadioButton>

        <RadioButton
            android:id="@+id/rdbMorango"
            android:background="@drawable/custom_radio_selector"
            android:button="@color/dark_blue"
            android:drawableTop="@drawable/morango"
            android:text="@string/morango"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_width="400dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:tag="-23.1854,-46.5361,-23.6626,-46.5383">
        </RadioButton>

        <RadioButton
            android:id="@+id/rdbTomate"
            android:background="@drawable/custom_radio_selector"
            android:button="@color/dark_blue"
            android:drawableTop="@drawable/tomate"
            android:text="@string/tomate"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_width="400dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:tag="-23.1857,-46.8978,-23.4284,-46.5333">
        </RadioButton>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>