<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".controller.Menu">

    <TextView
        android:id="@+id/tv_menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4287f5"
        android:padding="15dp"
        android:text="Menu"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:gravity="center" />

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="2"
        android:rowCount="2"
        android:padding="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_menu_1"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="10dp"
            android:text="@string/btn1"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            app:icon="@drawable/btn_caminhao"
            app:iconGravity="top"
            app:iconSize="70dp"
            app:iconTint="@null"
            android:elevation="5dp"
            android:stateListAnimator="@null" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_menu_2"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="10dp"
            android:text="@string/btn2"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            app:icon="@drawable/btn_servico"
            app:iconGravity="top"
            app:iconSize="70dp"
            app:iconTint="@null"
            android:elevation="5dp"
            android:stateListAnimator="@null"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_menu_3"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="10dp"
            android:text="@string/btn3"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            app:icon="@drawable/btn_add_servico"
            app:iconGravity="top"
            app:iconSize="80dp"
            app:iconTint="@null"
            android:elevation="5dp"
            android:stateListAnimator="@null"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_menu_4"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="10dp"
            android:text="@string/btn4"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:cornerRadius="10dp"
            app:icon="@drawable/btn_config"
            app:iconGravity="top"
            app:iconSize="70dp"
            app:iconTint="@null"
            android:elevation="5dp"
            android:stateListAnimator="@null"/>

    </GridLayout>
</RelativeLayout>