<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.Perfil">

    <TextView
        android:id="@+id/tv_menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue2"
        android:padding="15dp"
        android:text="@string/title_perfil"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:gravity="center" />


    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="1"
        android:rowCount="4"
        android:padding="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="100dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perfil_nome"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_gravity="start|center_vertical"
                    android:paddingEnd="10dp"/>
                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="JoÃ£o da Silva"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_gravity="start|center_vertical"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perfil_email"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_gravity="start|center_vertical"
                    android:paddingEnd="10dp"/>
                <TextView
                    android:id="@+id/tv_user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="joao.silva@example.com"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_gravity="start|center_vertical"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perfil_cpf"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_gravity="start|center_vertical"
                    android:paddingEnd="10dp"/>
                <TextView
                    android:id="@+id/tv_user_cpf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="123.456.789-00"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_gravity="start|center_vertical"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perfil_tipo"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_gravity="start|center_vertical"
                    android:paddingEnd="10dp"/>
                <TextView
                    android:id="@+id/tv_user_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Admin / Motorista"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_gravity="start|center_vertical"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

</RelativeLayout>